scripts/nullaway/nullgtn/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8.txt
../nullgtn/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8/src/edu/umw/cpsc/collegediversity/Group.java:40: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return members.get(s);
        ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8/src/edu/umw/cpsc/collegediversity/Student.java:238: error: [NullAway] dereferenced expression dormRoom is @Nullable
        Dorm d = dormRoom.getDorm();
                         ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8/src/edu/umw/cpsc/collegediversity/Student.java:448: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return dormRoom;
        ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8/src/edu/umw/cpsc/collegediversity/UpperclassHousingSelection.java:80: error: [NullAway] dereferenced expression upperclassmen is @Nullable
        for (int x = upperclassmen.size() - 1; x >= 0; x--) {
                                  ^
    (see http://t.uber.com/nullaway )
4 errors
